# citepro

./: .gitignore  404.html  LICENSE.txt  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  req_colab.txt
.github/workflows/: ghpages.yml
assets/stylesheets/: extra.css
docs/: index.md  reference.md  tutorials.md
overrides/: main.html
reference/: index.html
search/: search_index.json
src/citepro/: __init__.py  io.py  nbgui.py  pl.py  pp.py  utils.py
src/citepro/recipe/: __init__.py  create_mu.py  mu2ann.py
src/citeutil/: __init__.py  io.py  pp.py
src/citeutil/recipe/: create_mu.py  mu2ann.py
tutorials/: index.html
