[project]
name = "citeutil"  # Required

version = "0.1.0"  # Required

description = "A CITE-seq util code collection"  

readme = "README.md" # Optional

requires-python = ">=3.11"

license = {file = "LICENSE.txt"}

keywords = ["citeseq", "proteintech", "development"]  # Optional

classifiers = [  # Optional

  "Development Status :: 3 - Alpha",

  "Intended Audience :: Science/Research",

  "Topic :: Scientific/Engineering :: Bio-Informatics",

  "License :: Other/Proprietary License",

  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = [ # Optional
  "muon",
  "anndata",
  "numpy",
  "scipy",
  "scanpy"
]


# List URLs that are relevant to your project
#
# This field corresponds to the "Project-URL" and "Home-Page" metadata fields:
# https://packaging.python.org/specifications/core-metadata/#project-url-multiple-use
# https://packaging.python.org/specifications/core-metadata/#home-page-optional
#
# Examples listed include a pattern for specifying where the package tracks
# issues, where the source is hosted, where to say thanks to the package
# maintainers, and where to support the project financially. The key is
# what's used to render the link text on PyPI.
[project.urls]  # Optional
"Homepage" = "https://github.com/ptggenomics/citeutil"
"Bug Reports" = "https://github.com/ptggenomics/citeutil/issues"
"Source" = "https://github.com/ptggenomics/citeutil"


# This is configuration specific to the `setuptools` build backend.
# If you are using a different build backend, you will need to change this.
[tool.setuptools]
# If there are data files included in your packages that need to be
# installed, specify them here.
#package-data = {"sample" = ["*.dat"]}

[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
