[project]
name = "citepro" 

version = "0.1.1a" 

description = "A CITE-seq util code collection"  

readme = "README.md"

requires-python = ">=3.10"

license = {file = "LICENSE.txt"}

keywords = ["citeseq", "proteintech", "development"] 

classifiers = [  # Optional

  "Development Status :: 3 - Alpha",

  "Intended Audience :: Science/Research",

  "Topic :: Scientific/Engineering :: Bio-Informatics",

  # "License :: Other/Proprietary License",

  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = [ # Optional
  "muon",
  "anndata",
  "numpy<2",
  "scipy",
  "scanpy", # uv-sync automatically pulled a old version of llvm-lite.
  "numba>=0.57.1",
  "celltypist>=1.6.3",
  "ipyfilechooser>=0.6.0",
  "ipywidgets>=8.1.5",
]


[project.urls]  # Optional
"Homepage" = "https://github.com/ptggenomics/citeutil"
"Bug Reports" = "https://github.com/ptggenomics/citeutil/issues"
"Source" = "https://github.com/ptggenomics/citeutil"


# This is configuration specific to the `setuptools` build backend.
# If you are using a different build backend, you will need to change this.
[tool.setuptools]
# If there are data files included in your packages that need to be
# installed, specify them here.
#package-data = {"sample" = ["*.dat"]}

[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
